# leifer_lab_to_nwb

./: README.md  pyproject.toml
.github/workflows/: dailies.yml  dailiy_tests.yml  deploy-tests.yml  deploy_tests_on_pull_request.yml  testing.yml  testing_dev.yml
src/leifer-lab-to-nwb/randi_nature_2023/: __init__.py  _randi_nature_2023_converter.py  convert_session.py  requirements.txt
src/leifer-lab-to-nwb/randi_nature_2023/interfaces/: __init__.py  _binaryimagingextractor.py  _extra_ophys_metadata.py  _one_photon_series.py  _optogenetic_stimulation.py  binaryimagingextractor.py  onephotonseries.py
src/leifer_lab_to_nwb/randi_nature_2023/: __init__.py  _command_line_interface.py  _convert_session.py  _pump_probe_to_nwb.py  _randi_nature_2023_converter.py  convert_dataset.py  convert_processed_session.py  convert_raw_session.py  convert_session.py  requirements.txt  session_to_box_shape.json  test_all_interfaces.py
src/leifer_lab_to_nwb/randi_nature_2023/_notes/: meeting_5_15_2024.md
src/leifer_lab_to_nwb/randi_nature_2023/_testing/: generate_session_to_box_shape.py  test_all_interfaces.py
src/leifer_lab_to_nwb/randi_nature_2023/interfaces/: __init__.py  _binaryimagingextractor.py  _box_utils.py  _calcium_imaging_interface.py  _customsegmentationextractor.py  _customsegmentationinterface.py  _extra_ophys_metadata.py  _globals.py  _logbook_metadata.py  _neuropal_imaging_interface.py  _neuropal_segmentation_interface.py  _one_photon_series.py  _optogenetic_stimulation.py  _pump_probe_imaging_interface.py  _pump_probe_segmentation_extractor.py  _pump_probe_segmentation_interface.py  box_size_to_array.json
src/leifer_lab_to_nwb/randi_nature_2023/notes/: meeting_5_15_2024.md  meeting_5_31_2024.md  meeting_6_14_2024.md
